# community-scrypto

other/: README.md
other/dual-authz/: Cargo.toml
other/dual-authz/src/: lib.rs
